# bomberhuman

./: .gitignore  Cargo.toml
docs/: 0.bootstrap.js  bootstrap.js  index.html
html/: index.html  program.wasm  rocket.wasm
mylib/: foo.js
src/: controller.rs  game_state.rs  geometry.rs  lib.rs  models.rs
src/controller/: collision.rs  event.rs  input.rs  keytype.rs
src/controllers/: input.rs  mod.rs  time.rs
src/geometry/: direction.rs  mod.rs  point.rs  size.rs  traits.rs
src/javascript/: canvas.js
src/models/: block.rs  bomb.rs  fire.rs  item.rs  mod.rs  player.rs  trait.rs  vector.rs  wall.rs  world.rs
www/: index.js  package-lock.json  package.json  webpack.config.js
